--- a/boundary/author_addPaperPage.html
+++ b/boundary/author_addPaperPage.html
@@ -184,12 +184,12 @@
                             <label class="searchLeft col-sm-2 ">Select conference </label>
                             <!-- <select id="author_addConference" class="form-control select2 col-sm-4 inlineBlock" data-dropdown-css-class="select2-purple" multiple="multiple"> -->
                             <select id="author_addConference" class="form-control select2 col-sm-4 inlineBlock">
-                            <!-- retrieve conference number from db -->
-                            <option>Conference1 </option>
-                            <option>Conference2</option>
-                            <option>Conference3</option>
-                            <option>Conference4</option>
-                            <option>Conference5</option>
+                            <!-- retrieve conference name from db -->
+                            <option> </option>
+                            <option></option>
+                            <option></option>
+                            <option></option>
+                            <option></option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -197,11 +197,11 @@
                             <label class="searchLeft col-sm-2 ">Select author </label>
                             <select id="author_addAuthorName" class="form-control select2 col-sm-4 inlineBlock" multiple="multiple">
                                 <!-- retrieve author name from db -->
-                                <option>Author1 </option>
-                                <option>Author2</option>
-                                <option>Author3</option>
-                                <option>Author4</option>
-                                <option>Author5</option>
+                                <option> </option>
+                                <option></option>
+                                <option></option>
+                                <option></option>
+                                <option></option>
 
                             </select>
                         </div>
