--- a/boundary/author_searchPaperPage.html
+++ b/boundary/author_searchPaperPage.html
@@ -50,13 +50,13 @@
                         <!-- <span class="badge badge-warning navbar-badge">15</span> -->
 
                         <!-- retrieve number of email notification-->
-                        <span class="author_notiNo" class="author_noOfEmailNoti">4</span>
+                        <span class="author_notiNo" class="author_noOfEmailNoti"></span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                         <span class="dropdown-item dropdown-header">
                              <!-- retrieve number of email notification-->
                             <span class="author_noOfEmailNoti">
-                                4
+                                
                             </span> Notifications
                         </span>
                         <div class="dropdown-divider"></div>
@@ -64,7 +64,7 @@
                             <i class="fas fa-envelope mr-2"></i>
                             <!-- retrieve number of email notification-->
                             <span class="author_noOfEmailNoti">
-                                4
+                            
                             </span> new emails
                             <!-- <span class="float-right text-muted text-sm">3 mins</span> -->
                         </a>
@@ -201,9 +201,15 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>12345678</td>
-                                    <td>PaperA</td>
-                                    <!-- <td>Author</td> -->
+                                    <td>
+                                        <!-- retrieve paper id -->
+                                        <!-- 12345678 -->
+                                    </td>
+                                    <td>
+                                        <!-- retrieve paper name -->
+
+                                        <!-- PaperA -->
+                                    </td>
                                     <td>
                                         <a href="author_viewPaperPage.html">
                                             <button type="button" class="detail_action_btn" data-toggle="modal">
@@ -221,191 +227,46 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="searchPaperModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <div style="margin-top: 25px; float:left;width: 3px;height: 28px; background: #FED666;"></div>
-                        <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">View paper</p>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Paper ID:&nbsp;</p>
-                        <div class="detail">
-                            <!-- get paperID from DB-->
-                            <label class="author_searchPaperID">12345678</label>
-                        </div>
-                        <p>Paper name:&nbsp;</p>
-                        <div class="detail">
-                            <!-- get userFullName from DB-->
-                            <label class="author_searchPaperName">PaperA</label>
-                        </div>
+    </div>
+    <!-- ./wrapper -->
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js "></script>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js "></script>
+    <!-- AdminLTE -->
+    <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.2.0/dist/js/adminlte.min.js "></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js "></script>
+    <!-- datatable -->
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js "></script>
+    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js "></script>
+    <!--    <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js "></script>-->
+    <!--    <script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap4.min.js "></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.full.min.js "></script>
+    <script>
+        $(".nav .nav-link ").on("click ", function() {
+            $(".nav ").find(".active ").removeClass("active ");
+            $(this).addClass("active ");
+        });
 
-                        <button type="button" class="blue_btn" data-toggle="modal" data-target="#editPaperModal" id="author_editDetail_btn">
-                            Edit Detail
-                        </button>
-                        <button type="button" class="red_btn" data-toggle="modal" data-target="#deletePapereModal">
-                                                Delete paper
-                          </button>
+        $(function() {
 
-                    </div>
-                    <div class="modal-footer" style="border: none;">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal fade" id="editPaperModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <div style="margin-top: 25px; float:left;width: 3px;height: 28px; background: #FED666;"></div>
-                        <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">Edit paper</p>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Paper ID:&nbsp;</p>
-                        <div class="detail">
-                            <!-- get paperID from DB-->
-                            <label class="author_searchPaperID">12345678</label>
-                        </div>
-                        <p>Paper name:&nbsp;</p>
-                        <div class="detail">
-                            <!-- get PaperName from DB-->
-                            <input type="text " class="form-control " id="author_editPaperName ">
-
-                        </div>
-                        <p class="searchLeft">Select conference </p>
-                        <div class="detail">
-
-                            <select id="author_editConference" class="form-control select2" style="width: 100% !important;">
-                            <!-- retrieve conference number from db -->
-                            <option>Conference1 </option>
-                            <option>Conference2</option>
-                            <option>Conference3</option>
-                            <option>Conference4</option>
-                            <option>Conference5</option>
-                            </select>
-                        </div>
-                        <p class="searchLeft">Select author </p>
-                        <div class="detail">
-
-
-                            <select id="author_editAuthorName" class="form-control select2 col-sm-4 " multiple="multiple" style="width: 100% !important;">
-                                <!-- retrieve author name from db -->
-                                <option>Author1 </option>
-                                <option>Author2</option>
-                                <option>Author3</option>
-                                <option>Author4</option>
-                                <option>Author5</option>
-
-                            </select>
-                        </div>
-                        <p for="exampleInputFile">Upload paper:</p>
-                        <div class="form-group">
-
-                            <div class="input-group">
-                                <div class="custom-file">
-                                    <input type="file" class="custom-file-input" id="exampleInputFile">
-                                    <label class="custom-file-label" for="exampleInputFile">Choose file</label>
-                                </div>
-                                <div class="input-group-append">
-                                    <span class="input-group-text">Upload</span>
-                                </div>
-                            </div>
-                        </div>
-                        <button type="button " style="float: right " class="white_btn " data-dismiss="modal " aria-label="Close ">
-                            Back
-                        </button>
-                        <button type="button " id="author_saveEditPaper" style="float: right; color: white; margin-right: 10px; " class="blue_btn " data-toggle="modal " data-target="#saveModal ">
-                            Save
-                        </button>
-
-                    </div>
-                    <div class="modal-footer" style="border: none;">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal fade" id="deletePapereModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-
-                        <p style="font-size:20px; color: #109CF1;margin-top: 25px; margin-left: 10px; display: inline;">Delete Paper?</p>
-                        <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button> -->
-                    </div>
-                    <div class="modal-body">
-                        <p>Paper ID:&nbsp;</p>
-                        <div class="detail">
-                            <!-- get paperID from DB-->
-                            <label class="author_deletePaperID">12345678</label>
-                        </div>
-                        <p>Paper name:&nbsp;</p>
-                        <div class="detail">
-                            <!-- get userFullName from DB-->
-                            <label class="author_deletePaperName">PaperA</label>
-                        </div>
-
-                        <p class="deleteText">Deleting this paper mean you would be able to resubmit the correct version.</p>
-
-
-                        <button type="button" style="float: right" class="white_btn" data-dismiss="modal" aria-label="Close">
-                                Cancel
-                        </button>
-                        <button type="button" id="author_confirmDletion" style="float: right;background-color: #F7685B;color: white;" class="blue_btn">
-                            Confirm Deletion
-                        </button>
-                    </div>
-                    <div class="modal-footer" style="border: none;">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- ./wrapper -->
-        <!-- jQuery -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js "></script>
-        <!-- Bootstrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js "></script>
-        <!-- AdminLTE -->
-        <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.2.0/dist/js/adminlte.min.js "></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js "></script>
-        <!-- datatable -->
-        <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js "></script>
-        <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js "></script>
-        <!--    <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js "></script>-->
-        <!--    <script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap4.min.js "></script>-->
-        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.full.min.js "></script>
-        <script>
-            $(".nav .nav-link ").on("click ", function() {
-                $(".nav ").find(".active ").removeClass("active ");
-                $(this).addClass("active ");
+            $('#author_searchPaper').DataTable({
+                "paging ": true,
+                "lengthChange ": false,
+                "searching ": false,
+                "ordering ": false,
+                "info ": false,
+                "autoWidth ": false,
+                "responsive ": true,
             });
-
-            $(function() {
-
-                $('#author_searchPaper').DataTable({
-                    "paging ": true,
-                    "lengthChange ": false,
-                    "searching ": false,
-                    "ordering ": false,
-                    "info ": false,
-                    "autoWidth ": false,
-                    "responsive ": true,
-                });
-                //Initialize Select2 Elements
-                $('.select2').select2();
-                //Initialize Select2 Elements
-                $('.select2bs4').select2({
-                    theme: 'bootstrap4'
-                });
+            //Initialize Select2 Elements
+            $('.select2').select2();
+            //Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
             });
-        </script>
+        });
+    </script>
 </body>
 
 </html>
