--- a/boundary/author_profilePage.html
+++ b/boundary/author_profilePage.html
@@ -43,7 +43,36 @@
 
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link" data-toggle="dropdown" href="#">
+                        <i class="far fa-bell"></i>
+                        <!-- <i class="fa-solid fa-bell"></i> -->
+                        <!-- <span class="badge badge-warning navbar-badge">15</span> -->
 
+                        <!-- retrieve number of email notification-->
+                        <span class="author_notiNo" class="author_noOfEmailNoti"></span>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+                        <span class="dropdown-item dropdown-header">
+                                 <!-- retrieve number of email notification-->
+                                <span class="author_noOfEmailNoti">
+                                    
+                                </span> Notifications
+                        </span>
+                        <div class="dropdown-divider"></div>
+                        <a href="author_emailPage.html" class="dropdown-item">
+                            <i class="fas fa-envelope mr-2"></i>
+                            <!-- retrieve number of email notification-->
+                            <span class="author_noOfEmailNoti">
+                                    
+                                </span> new emails
+                            <!-- <span class="float-right text-muted text-sm">3 mins</span> -->
+                        </a>
+
+                        <div class="dropdown-divider"></div>
+                        <a href="author_emailPage.html" class="dropdown-item dropdown-footer">See All Notifications</a>
+                    </div>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" data-widget="fullscreen" href="#" role="button">
                         <i class="fas fa-expand-arrows-alt"></i>
