--- a/boundary/author_viewPaperPage.html
+++ b/boundary/author_viewPaperPage.html
@@ -266,31 +266,31 @@
                                     <div class="card-body table-responsive pad">
 
                                         <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                            <label class="btn btn-secondary active">
-                                                        <input type="radio" name="options" id="option_a1" autocomplete="off" checked> 3 (strong accept)
+                                            <label class="btn btn-secondary author_viewPaperAddRating active ">
+                                                        <input type="radio" id="author_viewPaperAddRating3" autocomplete="off" checked> 3<br>(strong accept)
                                                     </label>
-                                            <label class="btn btn-secondary">
-                                                        <input type="radio" name="options" id="option_a2" autocomplete="off"> 2 (accept)
+                                            <label class="btn btn-secondary author_viewPaperAddRating">
+                                                        <input type="radio"  id="author_viewPaperAddRating2" autocomplete="off"> 2<br>(accept)
                                                     </label>
-                                            <label class="btn btn-secondary">
-                                                        <input type="radio" name="options" id="option_a3" autocomplete="off"> 1 (weak accept)
+                                            <label class="btn btn-secondary author_viewPaperAddRating">
+                                                        <input type="radio"  id="author_viewPaperAddRating1" autocomplete="off"> 1<br>(weak accept)
                                                     </label>
 
-                                            <label class="btn btn-secondary">
-                                                        <input type="radio" name="options" id="option_a3" autocomplete="off">0 (borderline paper)
+                                            <label class="btn btn-secondary author_viewPaperAddRating">
+                                                        <input type="radio" id="author_viewPaperAddRating0" autocomplete="off">0<br>(borderline paper)
                                                     </label>
-                                            <label class="btn btn-secondary">
-                                                        <input type="radio" name="options" id="option_a3" autocomplete="off"> -1 (weak reject)
+                                            <label class="btn btn-secondary author_viewPaperAddRating">
+                                                        <input type="radio" name="options" id="author_viewPaperAddRatingMinus1" autocomplete="off"> -1 (weak reject)
                                                     </label>
-                                            <label class="btn btn-secondary">
-                                                        <input type="radio" name="options" id="option_a3" autocomplete="off"> -2 (reject)
+                                            <label class="btn btn-secondary author_viewPaperAddRating">
+                                                        <input type="radio" id="author_viewPaperAddRatingMinus3" autocomplete="off"> -2<br>(reject)
                                                     </label>
-                                            <label class="btn btn-secondary">
-                                                        <input type="radio" name="options" id="option_a3" autocomplete="off"> -3 (strong reject)
+                                            <label class="btn btn-secondary author_viewPaperAddRating">
+                                                        <input type="radio"  id="author_viewPaperAddRatingMinus3" autocomplete="off"> -3<br>(strong reject)
                                                     </label>
                                         </div>
                                     </div>
-                                    <button type="button" id="author_addReviewRating" class="blue_btn" data-toggle="modal" data-target="#addReviewRatingModal">
+                                    <button type="button" id="author_addReviewRating" class="blue_btn author_viewPaperEditDetail_btn" data-toggle="modal" data-target="#addReviewRatingModal">
                                                  Add review rating
                                             </button>
 
