--- a/boundary/author_profilePage.html
+++ b/boundary/author_profilePage.html
@@ -108,14 +108,6 @@
 
                 <nav class=" mt-2 ">
                     <ul class="nav nav-pills nav-sidebar flex-column " data-widget="treeview " role="menu " data-accordion="false ">
-                        <li class="nav-item">
-                            <a href="" class="nav-link">
-                                <i class="nav-icon"><img src="../img/nav_home_icon.svg"></i>
-                                <p class="navHeader">
-                                    Home
-                                </p>
-                            </a>
-                        </li>
                         <li class="nav-item active">
                             <a href="author_addPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/add.svg"></i>
@@ -188,37 +180,46 @@
                             <div class="form-group row">
                                 <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
                                 <div class="col-sm-4">
-                                    <input type="password" class="form-control" id="admin_profilePassword">
+                                    <!-- retrieve author password -->
+                                    <input type="password" class="form-control" id="author_profilePassword">
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label for="adminName" class="col-sm-2 col-form-label">Admin Name:</label>
+                                <label for="adminName" class="col-sm-2 col-form-label">Author Name:</label>
                                 <div class="col-sm-4">
-                                    <p class="form-control" id="admin_profileName" style="border: none; margin-left: -10px;">Admin A </p>
+                                    <!-- retrieve author name -->
+                                    <p class="form-control" id="author_profileName" style="border: none; margin-left: -10px;">
+                                    </p>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputSex" class="col-sm-2 col-form-label">Gender：</label>
                                 <div class="col-sm-4">
-                                    <p class="form-control" id="admin_profileGender" style="border: none; margin-left: -10px;">F</p>
+                                    <!-- retrieve author gender -->
+                                    <p class="form-control" id="author_profileGender" style="border: none; margin-left: -10px;">
+                                    </p>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputAge" class="col-sm-2 col-form-label">Age：</label>
                                 <div class="col-sm-4">
-                                    <p class="form-control" id="admin_profileAge" style="border: none; margin-left: -10px;">38</p>
+                                    <!-- retrieve author age -->
+                                    <p class="form-control" id="author_profileAge" style="border: none; margin-left: -10px;">
+                                    </p>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputContact" class="col-sm-2 col-form-label">Contact Number:</label>
                                 <div class="col-sm-4">
-                                    <input type="tel" class="form-control" id="admin_profileContact">
+                                    <!-- retrieve author contact number -->
+                                    <input type="tel" class="form-control" id="author_profileContact">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputContact" class="col-sm-2 col-form-label">Email:</label>
                                 <div class="col-sm-4">
-                                    <input type="email" class="form-control " id="admin_profileEmail">
+                                    <!-- retrieve author email -->
+                                    <input type="email" class="form-control " id="author_profileEmail">
                                 </div>
                             </div>
                             <div class="form-group row">
