--- a/boundary/author_viewPaperPage.html
+++ b/boundary/author_viewPaperPage.html
@@ -191,7 +191,6 @@
                                         <p class="col-sm-4">Paper name:</p>
                                         <div class="col-sm-4">
                                             <!-- retieve paper name -->
-
                                             <label id="author_viewPaperName ">
                                                 <!-- PaperA -->
                                             </label>
@@ -210,9 +209,8 @@
                                     <div class="row">
                                         <p class="col-sm-4">Author:</p>
                                         <div class="col-sm-4">
+                                            <!-- retieve author name -->
                                             <label class="author_viewPaperAuthor ">
-                                                <!-- retieve author name -->
-
                                                 <!-- Author1 -->
                                             </label>
                                         </div>
@@ -249,6 +247,7 @@
                                     <div class="row">
                                         <p class="col-sm-4">Paper review:</p>
                                         <div class="col-sm-7">
+                                            <!-- retrieve the review of paper-->
                                             <p id="author_viewPaperReview ">
                                                 <!-- What is a review article? A review article can also be called a literature review, or a review of literature. It is a survey of previously published research on a topic. It should give an overview of current thinking on the topic. And, unlike an original
                                                 research article, it will not present new experimental results. Writing a review of literature is to provide a critical evaluation of the data available from existing studies. Review articles can identify
@@ -290,6 +289,7 @@
                                                     </label>
                                         </div>
                                     </div>
+                                    <!-- insert the review rating select above-->
                                     <button type="button" id="author_addReviewRating" class="blue_btn author_viewPaperEditDetail_btn" data-toggle="modal" data-target="#addReviewRatingModal">
                                                  Add review rating
                                             </button>
