--- a/boundary/admin_searchUserPage.html
+++ b/boundary/admin_searchUserPage.html
@@ -432,13 +432,13 @@
         $(function() {
 
             $('#searchUser').DataTable({
-                "paging ": true,
-                "lengthChange ": true,
-                "searching ": true,
-                "ordering ": true,
-                "info ": true,
-                "autoWidth ": true,
-                "responsive ": true,
+                "paging": true,
+                "lengthChange": false,
+                "searching": false,
+                "ordering": false,
+                "info": false,
+                "autoWidth": false,
+                "responsive": false,
             });
         });
     </script>
