--- a/boundary/author_searchPaperPage.html
+++ b/boundary/author_searchPaperPage.html
@@ -248,13 +248,13 @@
         $(function() {
 
             $('#author_searchPaper').DataTable({
-                "paging ": true,
-                "lengthChange ": false,
-                "searching ": false,
-                "ordering ": false,
-                "info ": false,
-                "autoWidth ": false,
-                "responsive ": true,
+                "paging": true,
+                "lengthChange": true,
+                "searching": true,
+                "ordering": true,
+                "info": true,
+                "autoWidth": true,
+                "responsive": true,
             });
             //Initialize Select2 Elements
             $('.select2').select2();
