--- a/boundary/author_viewPaperPage.html
+++ b/boundary/author_viewPaperPage.html
@@ -492,15 +492,15 @@
 
         $(function() {
 
-            $('#searchUser').DataTable({
-                "paging ": true,
-                "lengthChange ": true,
-                "searching ": false,
-                "ordering ": true,
-                "info ": true,
-                "autoWidth ": true,
-                "responsive ": true,
-            });
+            // $('#searchUser').DataTable({
+            //     "paging": true,
+            //     "lengthChange": false,
+            //     "searching": false,
+            //     "ordering": false,
+            //     "info": false,
+            //     "autoWidth": false,
+            //     "responsive": false,
+            // });
             //Initialize Select2 Elements
             $('.select2').select2();
             //Initialize Select2 Elements
