--- a/boundary/admin_searchUserProfilePage.html
+++ b/boundary/admin_searchUserProfilePage.html
@@ -136,7 +136,7 @@
             </div>
             <!-- /.sidebar -->
         </aside>
-        <!-- Content Wrapper. Doctor Home Page -->
+        <!-- Content Wrapper -->
         <div class="content-wrapper ">
             <div class="col-12">
                 <div class="card" style="margin-top: 20px;margin-bottom: 0;">
