--- a/boundary/reviewer_viewPaperPage.html
+++ b/boundary/reviewer_viewPaperPage.html
@@ -88,7 +88,7 @@
                         </li> -->
                         <li class="nav-item active">
                             <a href="reviewer_viewPaperPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="../img/add.svg"></i>
+                                <i class="nav-icon"><img src="../img/nav_record_icon.svg"></i>
                                 <p class="navHeader">
                                     View paper
                                 </p>
@@ -97,7 +97,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="reviewer_addBidPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="../img/search.svg"></i>
+                                <i class="nav-icon"><img src="../img/add.svg"></i>
                                 <p class="navHeader">
                                     Add bid
                                 </p>
@@ -106,7 +106,7 @@
                         </li>
                         <li class="nav-item active">
                             <a href="reviewer_viewBidPage" class="nav-link">
-                                <i class="nav-icon"><img src="../img/email.png"></i>
+                                <i class="nav-icon"><img src="../img/nav_record_icon.svg"></i>
                                 <p class="navHeader">
                                     View bid
                                 </p>
@@ -166,8 +166,8 @@
                                     <th>Paper ID</th>
                                     <th>Paper Name</th>
                                     <th>Author name</th>
-                                    <th>Add</th>
-                                    <th>Update</th>
+                                    <th>Add review & rating</th>
+                                    <th>View review & rating Update</th>
 
                                 </tr>
                             </thead>
@@ -195,9 +195,9 @@
                                         </a>
                                     </td>
                                     <td>
-                                        <a href="reviewer_updateRatingReviewPage.html">
+                                        <a href="reviewer_viewDetailUpdatePaperPage .html">
                                             <button type="button" class="detail_action_btn" data-toggle="modal">
-                                            Update
+                                            View Detail
                                         </button>
                                         </a>
                                     </td>
