--- a/boundary/admin_profilePage.html
+++ b/boundary/admin_profilePage.html
@@ -143,7 +143,7 @@
             <!-- /.sidebar -->
         </aside>
 
-        <!-- Content Wrapper. Doctor Home Page -->
+        <!-- Content Wrapper-->
         <div class="content-wrapper ">
             <div class="col-12">
                 <div class="card" style="margin-top: 20px;">
