--- a/boundary/reviewer_viewDetailUpdatePaperPage .html
+++ b/boundary/reviewer_viewDetailUpdatePaperPage .html
@@ -17,7 +17,7 @@
     <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="../style.css">
-    <title>Author</title>
+    <title>Reviewer</title>
     <style>
         div {
             height: auto;
@@ -43,33 +43,6 @@
 
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link" data-toggle="dropdown" href="#">
-                        <i class="far fa-bell"></i>
-                        <!-- retrieve number of email notification-->
-                        <span class="author_notiNo" class="author_noOfEmailNoti"></span>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                        <span class="dropdown-item dropdown-header">
-                             <!-- retrieve number of email notification-->
-                            <span class="author_noOfEmailNoti">
-                                
-                            </span> Notifications
-                        </span>
-                        <div class="dropdown-divider"></div>
-                        <a href="author_emailPage.html" class="dropdown-item">
-                            <i class="fas fa-envelope mr-2"></i>
-                            <!-- retrieve number of email notification-->
-                            <span class="author_noOfEmailNoti">
-                            
-                            </span> new emails
-                            <!-- <span class="float-right text-muted text-sm">3 mins</span> -->
-                        </a>
-
-                        <div class="dropdown-divider"></div>
-                        <a href="author_emailPage.html" class="dropdown-item dropdown-footer">See All Notifications</a>
-                    </div>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" data-widget="fullscreen" href="#" role="button">
                         <i class="fas fa-expand-arrows-alt"></i>
@@ -94,10 +67,10 @@
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex" id="platform_name">
                     <span class="platform_name brand-image-xs logo-xl">
-                        Author Patform
+                        Reviewer Patform
                     </span>
                     <span class="platform_name brand-image-xl logo-xs" id="platformShort_name">
-                        Aut
+                        Rev
                     </span>
                 </div>
 
@@ -114,34 +87,34 @@
                             </a>
                         </li> -->
                         <li class="nav-item active">
-                            <a href="author_addPaperPage.html" class="nav-link">
+                            <a href="reviewer_viewPaperPage.html" class="nav-link">
+                                <i class="nav-icon"><img src="../img/nav_record_icon.svg"></i>
+                                <p class="navHeader">
+                                    View paper
+                                </p>
+                            </a>
+
+                        </li>
+                        <li class="nav-item active">
+                            <a href="reviewer_addBidPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/add.svg"></i>
                                 <p class="navHeader">
-                                    Add paper
+                                    Add bid
                                 </p>
                             </a>
 
                         </li>
                         <li class="nav-item active">
-                            <a href="author_searchPaperPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="../img/search.svg"></i>
+                            <a href="reviewer_viewBidPage" class="nav-link">
+                                <i class="nav-icon"><img src="../img/nav_record_icon.svg"></i>
                                 <p class="navHeader">
-                                    Search paper
-                                </p>
-                            </a>
-
-                        </li>
-                        <li class="nav-item active">
-                            <a href="author_emailPage.html" class="nav-link">
-                                <i class="nav-icon"><img src="../img/email.png"></i>
-                                <p class="navHeader">
-                                    View email
+                                    View bid
                                 </p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <hr color="#EBEFF2" style="border:1; margin-top:10px; opacity: 0.8;">
-                            <a href="author_profilePage.html" class="nav-link ">
+                            <a href="reviewer_profilePage" class="nav-link ">
                                 <i class="nav-icon"><img src="../img/nav_profile_icon.svg"></i>
                                 <p class="navHeader">
                                     Profile
@@ -164,62 +137,12 @@
             </div>
             <!-- /.sidebar -->
         </aside>
-        <!-- Content Wrapper-->
+        <!-- Content Wrapper -->
         <div class="content-wrapper ">
-            <div class="col-12">
-                <div class="card" style="margin-top: 20px;margin-bottom: 0;">
-                    <div class="card-header" style="padding-top: 0; padding-bottom: 20px; padding-top: 20px; background-color: white;">
-                        <div style="float:left;width: 3px;height: 28px; background: #109CF1;"></div>
-                        <p style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline;">Search paper</p>
-                    </div>
-
-                    <div class="card-body">
-                        <div>
-                            <p class="searchLeft">Enter paper name: </p>
-                            <!-- search User ID -->
-                            <input type="search" id="author_searchEnterPaperName" class="form-control form-control-lg">
-                            <button type="submit" class="btn btn-outline-primary search_button">search</button>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
             <div class="col-12">
                 <div class="card" style="margin-top: 20px;">
                     <div class="card-body">
-                        <table id="author_searchPaper" class="table table-hover table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="width:100%">
-                            <thead>
-                                <tr>
-                                    <th>Paper ID</th>
-                                    <th>Paper Name</th>
-                                    <!-- <th>User Profile</th> -->
-                                    <th>Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <!-- retrieve paper id -->
-                                        <!-- 12345678 -->
-                                    </td>
-                                    <td>
-                                        <!-- retrieve paper name -->
 
-                                        <!-- PaperA -->
-                                    </td>
-                                    <td>
-                                        <a href="author_viewPaperPage.html">
-                                            <button type="button" class="detail_action_btn" data-toggle="modal">
-                                            Details
-                                        </button>
-                                        </a>
-                                    </td>
-
-
-                                </tr>
-
-                            </tbody>
-                        </table>
                     </div>
                 </div>
             </div>
@@ -246,9 +169,29 @@
             $(this).addClass("active ");
         });
 
-        $(function() {
+        $(document).ready(function() {
 
-            $('#author_searchPaper').DataTable({
+            // $('#reviewer_viewPaper').DataTable({
+            //     search: {
+            //         return: false,
+            //     },
+            // });
+            //Initialize Select2 Elements
+            $('.select2').select2();
+            //Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            });
+        });
+        $(document).ready(function() {
+            $('#reviewer_viewPaper').DataTable({
+                // lengthMenu: [
+                //     [10, 25, 50, -1],
+                //     [10, 25, 50, 'All'],
+                // ],
+                search: {
+                    return: false,
+                },
                 "paging": true,
                 "lengthChange": true,
                 "searching": true,
@@ -256,12 +199,6 @@
                 "info": true,
                 "autoWidth": true,
                 "responsive": true,
-            });
-            //Initialize Select2 Elements
-            $('.select2').select2();
-            //Initialize Select2 Elements
-            $('.select2bs4').select2({
-                theme: 'bootstrap4'
             });
         });
     </script>
